syntax = "proto3";

package service;



option java_package = "ar.edu.itba.pod.grpc";
option java_outer_classname = "StatusModel";
option java_multiple_files = true;

message StatusResponse {
  int32 code = 1;
  string message = 2;
}
